objects/APTS_Pricing_Mode__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Bidding_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Bidding Unit</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Pricing Modes</relationshipLabel>
        <relationshipName>Bidding_Unit_Pricing_Modes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_ABB_Source_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Source location</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Pricing Modes (ABB Source location)</relationshipLabel>
        <relationshipName>Source_Location_Pricing_Modes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Commission Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own Billing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Currency__c</fullName>
        <globalPicklist>CurrencyISOCodes</globalPicklist>
        <label>Transfer Price Currency</label>
        <type>Picklist</type>
    </fields>
    <label>Pricing Mode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_ABB_Bidding_Unit__c</columns>
        <columns>APTS_ABB_Source_location__c</columns>
        <columns>APTS_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Pricing Mode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Modes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>